pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimpler_NoHint/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: TCP'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - ports:
            - protocol: TCP
          to:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Gryffindor) dst: (group = Web and group = Gryffindor) conn: TCP'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
          ports:
            - protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Slytherin) dst: (group = Web and group = Slytherin) conn: TCP'
        nsx-id: "9195"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
          ports:
            - protocol: TCP
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: UDP'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    egress:
        - ports:
            - protocol: UDP
          to:
            - podSelector:
                matchExpressions:
                    - key: group__App
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Web
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Web and group = Slytherin) dst: (group = App and group = Slytherin) conn: UDP'
        nsx-id: "9196"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Web
                      operator: Exists
                    - key: group__Slytherin
                      operator: Exists
          ports:
            - protocol: UDP
    podSelector:
        matchExpressions:
            - key: group__App
              operator: Exists
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "10230"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: none
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
